# avp-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/avp_cli/: __init__.py  main.py
tests/: __init__.py  test_cli.py
